# flex

./: .gitignore  .prettierignore  AGENTS.md  Anchor.toml  CONVENTIONS.md  Cargo.toml  DEV.md  Makefile  README.md  bun.workspace.yaml  eslint.config.ts  package.json  tsconfig.json  tsconfig.typedoc.json  typedoc.config.mjs
.githooks/: pre-commit
docs/: flex-arch.md  flex-solana.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ed25519_parser.rs  split_arithmetic.rs  stateful_sequence.rs
programs/flex/: Cargo.toml
programs/flex/src/: error.rs  events.rs  lib.rs
programs/flex/src/instructions/: close_escrow.rs  close_session_key.rs  close_token_accounts.rs  create_escrow.rs  deposit.rs  emergency_close.rs  finalize.rs  force_close.rs  mod.rs  refund.rs  register_session_key.rs  revoke_session_key.rs  submit_authorization.rs  void_pending.rs
programs/flex/src/state/: mod.rs
scripts/: package.json
scripts/src/: create-devnet-escrow.ts  generate-client.ts  setup-devnet.ts  solana.ts
scripts/src/examples/: README.md  facilitator.ts  payment.ts  server.ts
skills/: README.md
skills/anchor-core/: SKILL.md
skills/anchor-cpis/: SKILL.md
skills/anchor-pdas/: SKILL.md
skills/anchor-security/: SKILL.md
skills/anchor-testing/: SKILL.md
skills/anchor-token-operations/: SKILL.md
skills/rust-solana/: SKILL.md
tests/: package.json
tests/src/: coverage-gaps.test.ts  escrow.test.ts  helpers.ts  litesvm-rpc.ts  litesvm-setup.ts  recovery.test.ts  session-key.test.ts  settlement.test.ts
