[package]
name = "flex"
version = "0.1.0"
description = "Flex Payment Scheme escrow program"
edition = "2021"
license = "LGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]
name = "flex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
]
